<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    >
    <LinearLayout
        android:id="@+id/topLL"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@+id/ad_view_container"
        android:orientation="vertical">
        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="#D7D7D7"
            android:elevation="0dp"
            app:navigationIcon="?attr/homeAsUpIndicator"
            app:theme="@style/ThemeOverlay.AppCompat.Light"
            app:popupTheme="@style/ThemeOverlay.AppCompat.Light" >
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text=""
                android:textColor="@color/black"
                android:layout_gravity="center"
                android:fontFamily="@font/montserrat_semi_bold"
                android:textSize="16sp"
                android:id="@+id/toolbar_title" />
        </androidx.appcompat.widget.Toolbar>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="3"
            android:background="@color/background"
            android:elevation="4dp"
            android:orientation="vertical">


            <LinearLayout
                style="@style/Col"
                android:layout_marginStart="20dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="20dp"
                android:layout_marginBottom="30dp"
                android:background="@drawable/bottom_border">

                <TextView
                    android:id="@+id/textView"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="From: "
                    android:textColor="#80000000"
                    />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <Spinner
                        android:id="@+id/unit1"
                        style="@style/UnitDropdown" />

                    <EditText
                        android:id="@+id/value1"
                        android:gravity="center|end"

                        android:paddingEnd="5dp"
                        style="@style/DecimalInput" />


                </LinearLayout>
            </LinearLayout>


            <LinearLayout style="@style/Col"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp"
                android:layout_marginBottom="30dp"
                android:layout_marginTop="10dp"
                android:background="@drawable/bottom_border">

                <TextView
                    android:id="@+id/toTextView"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="#80000000"
                    android:text="To: " />

                <LinearLayout style="@style/Row">

                    <Spinner
                        android:id="@+id/unit2"
                        style="@style/UnitDropdown" />

                    <EditText
                        android:id="@+id/value2"
                        android:gravity="center|end"
                        android:paddingEnd="5dp"

                        style="@style/DecimalInput" />


                </LinearLayout>
            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="4"
            android:background="@color/background"
            android:baselineAligned="false"
            android:elevation="0dp"
            android:orientation="horizontal">

            <TableLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="3"
                android:background="#F2EDED"
                android:elevation="0dp"
                android:stretchColumns="*">

                <TableRow android:layout_weight="1">

                    <Button
                        android:id="@+id/button_7"
                        style="@style/InputButtons"
                        android:text="@string/seven" />

                    <Button
                        android:id="@+id/button_8"
                        style="@style/InputButtons"
                        android:text="@string/eight" />

                    <Button
                        android:id="@+id/button_9"
                        style="@style/InputButtons"
                        android:text="@string/nine" />
                </TableRow>

                <TableRow android:layout_weight="1">

                    <Button
                        android:id="@+id/button_4"
                        style="@style/InputButtons"
                        android:text="@string/four" />

                    <Button
                        android:id="@+id/button_5"
                        style="@style/InputButtons"
                        android:text="@string/five" />

                    <Button
                        android:id="@+id/button_6"
                        style="@style/InputButtons"
                        android:text="@string/six" />
                </TableRow>

                <TableRow android:layout_weight="1">

                    <Button
                        android:id="@+id/button_1"
                        style="@style/InputButtons"
                        android:text="@string/one" />

                    <Button
                        android:id="@+id/button_2"
                        style="@style/InputButtons"
                        android:text="@string/two" />

                    <Button
                        android:id="@+id/button_3"
                        style="@style/InputButtons"
                        android:text="@string/three" />
                </TableRow>

                <TableRow android:layout_weight="1">

                    <Button
                        android:id="@+id/button_dot"
                        style="@style/InputButtons"
                        android:text="@string/dot" />

                    <Button
                        android:id="@+id/button_0"
                        style="@style/InputButtons"
                        android:text="@string/zero" />


                </TableRow>
            </TableLayout>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="#D7D7D7"
                android:elevation="3dp"
                android:orientation="vertical">


                <ImageButton
                    android:id="@+id/button_back"
                    style="@style/InputButtons"
                    android:layout_weight="1"
                    android:contentDescription="@string/backspace"
                    android:src="@drawable/ic_backspace_white" />

                <Button
                    android:id="@+id/button_ac"
                    style="@style/CustomButtons"
                    android:layout_weight="1"

                    android:text="AC" />

                <Button
                    android:id="@+id/button_minus"
                    style="@style/CustomButtons"
                    android:layout_weight="1"
                    android:text="+/-" />

                <ImageButton
                    android:id="@+id/swap"
                    style="@style/InputButtons"
                    android:layout_weight="1"
                    android:contentDescription="@string/swap"
                    android:src="@drawable/ic_swap" />
            </LinearLayout>

        </LinearLayout>
    </LinearLayout>
    <FrameLayout
        android:id="@+id/ad_view_container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:layout_alignParentBottom="true" />

</RelativeLayout>
