<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:id="@+id/topLL"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@+id/ad_view_container"
        android:orientation="vertical">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="#D7D7D7"
            android:elevation="0dp"
            app:navigationIcon="?attr/homeAsUpIndicator"
            app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
            app:theme="@style/ThemeOverlay.AppCompat.Light">

            <TextView
                android:id="@+id/toolbar_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:fontFamily="@font/montserrat_semi_bold"
                android:text=""
                android:textColor="@color/black"
                android:textSize="16sp" />
        </androidx.appcompat.widget.Toolbar>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="3"
            android:background="@color/background"
            android:elevation="4dp"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_marginStart="20dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="20dp"
                android:layout_marginBottom="10dp"
                android:layout_weight="1.4">

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:layout_marginEnd="5dp"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="Original Serves"
                        android:textSize="14sp"
                        android:fontFamily="@font/montserrat_semi_bold"
                        android:layout_marginBottom="5dp"/>

                    <EditText
                        android:id="@+id/originalValue"
                        android:background="@drawable/border"
                        style="@style/DecimalInput2"
                        android:paddingStart="10dp"

                        />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:layout_marginStart="5dp"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="Needs to Serve"
                        android:textSize="14sp"
                        android:fontFamily="@font/montserrat_semi_bold"
                        android:layout_marginBottom="5dp"/>

                    <EditText
                        android:id="@+id/desiredValue"
                        style="@style/DecimalInput2"
                        android:background="@drawable/border"
                        android:paddingStart="10dp"

                        />
                </LinearLayout>


            </LinearLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp"
                android:layout_marginBottom="10dp"
                android:layout_weight="1"
                android:background="@drawable/spinner_bg">

                <com.androidapp.convero.views.IngredientSpinner
                    android:id="@+id/ingredient"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"

                    android:paddingStart="@dimen/margin" />
            </RelativeLayout>


            <LinearLayout
                style="@style/Row"
                android:layout_marginStart="20dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="20dp"
                android:layout_marginBottom="10dp"
                android:background="@drawable/border">

                <EditText
                    android:id="@+id/value1"
                    style="@style/DecimalInput" />

                <View style="@style/Divider_ver" />

                <Spinner
                    android:id="@+id/unit1"
                    style="@style/UnitDropdown"
                    android:theme="@style/SpinnerTheme"

                    />
            </LinearLayout>


            <LinearLayout
                style="@style/Row"
                android:layout_marginStart="20dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="20dp"

                android:background="@drawable/border">

                <EditText
                    android:id="@+id/value2"
                    style="@style/DecimalInput" />

                <View style="@style/Divider_ver" />

                <Spinner
                    android:id="@+id/unit2"
                    style="@style/UnitDropdown"
                    android:theme="@style/SpinnerTheme" />
            </LinearLayout>

            <TextView
                android:id="@+id/resizedText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="15dp"
                android:gravity="center"
                android:fontFamily="@font/montserrat_semi_bold"
                android:text="Resized serving quantity"
                android:textSize="12sp"
                android:visibility="invisible"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="4"
            android:background="@color/background"
            android:baselineAligned="false"
            android:elevation="0dp"
            android:orientation="horizontal">

            <TableLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="3"
                android:background="#F2EDED"
                android:elevation="0dp"
                android:stretchColumns="*">

                <TableRow android:layout_weight="1">

                    <Button
                        android:id="@+id/button_7"
                        style="@style/InputButtons"
                        android:text="@string/seven" />

                    <Button
                        android:id="@+id/button_8"
                        style="@style/InputButtons"
                        android:text="@string/eight" />

                    <Button
                        android:id="@+id/button_9"
                        style="@style/InputButtons"
                        android:text="@string/nine" />
                </TableRow>

                <TableRow android:layout_weight="1">

                    <Button
                        android:id="@+id/button_4"
                        style="@style/InputButtons"
                        android:text="@string/four" />

                    <Button
                        android:id="@+id/button_5"
                        style="@style/InputButtons"
                        android:text="@string/five" />

                    <Button
                        android:id="@+id/button_6"
                        style="@style/InputButtons"
                        android:text="@string/six" />
                </TableRow>

                <TableRow android:layout_weight="1">

                    <Button
                        android:id="@+id/button_1"
                        style="@style/InputButtons"
                        android:text="@string/one" />

                    <Button
                        android:id="@+id/button_2"
                        style="@style/InputButtons"
                        android:layout_height="match_parent"
                        android:text="@string/two" />

                    <Button
                        android:id="@+id/button_3"
                        style="@style/InputButtons"
                        android:text="@string/three" />
                </TableRow>

                <TableRow android:layout_weight="1">

                    <Button
                        android:id="@+id/button_dot"
                        style="@style/InputButtons"
                        android:text="@string/dot" />

                    <Button
                        android:id="@+id/button_0"
                        style="@style/InputButtons"
                        android:text="@string/zero" />



                    <ImageButton
                        android:id="@+id/swap"
                        style="@style/InputButtons"
                        android:src="@drawable/ic_history"
                        android:text="History" />
                </TableRow>
            </TableLayout>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="#D7D7D7"
                android:elevation="3dp"
                android:orientation="vertical">


                <ImageButton
                    android:id="@+id/button_back"
                    style="@style/InputButtons"
                    android:layout_weight="1"
                    android:contentDescription="@string/backspace"
                    android:src="@drawable/ic_backspace_white" />

                <Button
                    android:id="@+id/button_half"
                    style="@style/InputButtons"
                    android:layout_weight="1"
                    android:text="@string/half"
                    android:textStyle="bold" />

                <Button
                    android:id="@+id/button_third"
                    style="@style/InputButtons"
                    android:layout_weight="1"
                    android:text="@string/third"
                    android:textStyle="bold" />

                <Button
                    android:id="@+id/button_quarter"
                    style="@style/InputButtons"
                    android:layout_weight="1"
                    android:text="@string/quarter"
                    android:textStyle="bold" />
            </LinearLayout>

        </LinearLayout>
    </LinearLayout>

    <FrameLayout
        android:id="@+id/ad_view_container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerInParent="true" />

</RelativeLayout>